#5. 대문 페이지 수정

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,8 +5,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-
+    <h1> kopol API documentation </h1>
+	
+	<p> if you want detail of kopol 'API Server' => https://github.com/limdongjin/kopol </p>
   </body>
 </html>
